Bug 162958 - When using formula with Impress Style is lost
Summary: When using formula with Impress Style is lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.7.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.2.7 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-14 11:57 UTC by Pierre C
Modified: 2024-09-20 19:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file (13.52 KB, application/vnd.oasis.opendocument.presentation)
2024-09-14 14:05 UTC, Pierre C
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre C 2024-09-14 11:57:15 UTC
Step to reproduce :
Create a new Impress file

Add a formula

Default style is applied

Change style of the formula (a style with backgroud fill for example)
Save, close

Reopen, the style is back to default

Works with AOO, worked fine with LO but lost for at least one year
Comment 1 m_a_riosv 2024-09-14 13:28:14 UTC
Please detail the steps, and inform about the file format used to save.

Also, please can you paste the information in Menu/Help/About LibreOffice, there is an icon to copy.
Comment 2 Pierre C 2024-09-14 14:03:18 UTC
I'm using LO
Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 87fa9aec1a63e70835390b81c40bb8993f1d4ff6
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: CL threaded

Same problem with previous versions
I will upload a test file

Easy to reproduce the bug.

Open the test file, click on the formula, select a new style, save,close, open the file, look at the style of the formula, you'll see that the style hasn't been changed
Comment 3 Pierre C 2024-09-14 14:05:02 UTC
Created attachment 196442 [details]
Test file
Comment 4 Pierre C 2024-09-14 14:08:49 UTC
With previous version of (I don't know when the bug appear) it worked fine. And the I see all my impress files with the lost of the style of the formulas.

I did not understand immediately what was the problem
Comment 5 m_a_riosv 2024-09-14 14:19:14 UTC
Reproducible
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 47a348bb0fd6dfdd93c1975d216daadc4f6b9b6f
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded

Latest version that works on the ones I have installed.
Version: 6.4.7.2 (x64)
Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US
Calc: CL


Seems the issue is at opening, ver 6.4 opens fine a file saved with ver 7.6.
Comment 6 raal 2024-09-14 15:49:47 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6$.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 000529d008c9d050054d6f153aa9cfe2816573cb is the first bad commit
commit 000529d008c9d050054d6f153aa9cfe2816573cb
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Oct 30 21:10:20 2023 +0100

    source 125cf1525361c6cd699574f60b4cf12868188568

156598: add referer to ole objects | https://gerrit.libreoffice.org/c/core/+/156598
Comment 7 Caolán McNamara 2024-09-14 20:12:00 UTC
https://gerrit.libreoffice.org/c/core/+/173377 should fix it
Comment 8 Commit Notification 2024-09-15 08:21:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/92ab4166ecc74eff8675e7da319c3249e8c285d0

Resolves: tdf#162958 When using formula with Impress Style is lost

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2024-09-15 08:23:21 UTC
fixed in trunk, backport to 24-8 and 24-2 in gerrit
Comment 10 Commit Notification 2024-09-20 19:04:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/508b4ef89dcdd5b2d07e0b7421728b0fb4927f0c

Resolves: tdf#162958 When using formula with Impress Style is lost

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-09-20 19:04:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/509c22c658adcb84fa1b322456651bf09b621315

Resolves: tdf#162958 When using formula with Impress Style is lost

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.