Resolves: tdf#162958 When using formula with Impress Style is lost

regression since:

commit 125cf1525361c6cd699574f60b4cf12868188568
CommitDate: Thu Sep 7 08:54:56 2023 +0200

    add referer to ole objects

where these service names changed there should be listed here too
so they get the same post-create setup they do on the bare
"no-argument" route.

Change-Id: I21fb9a92f63cac46e4a0fd46f7c2b8d2956ec829
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173377
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins