sd/source/ui/unoidl/unomodel.cxx
@@ -1243,7 +1243,11 @@ SdXImpressDocument::createInstanceWithArguments(
 {
     OUString arg;
     if ((ServiceSpecifier == "com.sun.star.drawing.GraphicObjectShape"
+         || ServiceSpecifier == "com.sun.star.drawing.AppletShape"
+         || ServiceSpecifier == "com.sun.star.drawing.FrameShape"
+         || ServiceSpecifier == "com.sun.star.drawing.OLE2Shape"
          || ServiceSpecifier == "com.sun.star.drawing.MediaShape"
+         || ServiceSpecifier == "com.sun.star.drawing.PluginShape"
          || ServiceSpecifier == "com.sun.star.presentation.MediaShape")
         && Arguments.getLength() == 1 && (Arguments[0] >>= arg))
     {
